Refactored code snippets

--- a/roc.ipynb
+++ b/roc.ipynb
@@ -56,13 +56,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loading and processing digits dataset\n",
     "hw_digits = load_digits()\n",
     "n_samples = len(hw_digits.images)\n",
     "data = hw_digits.images.reshape((n_samples, -1))\n",
     "\n",
+    "# Splitting data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    data, hw_digits.target, test_size=0.5, shuffle=False\n",
     ")\n",
+    "\n",
     "# Sample data given as n digits[0..9], however, we wish to classify based on the trueness of 3\n",
     "y_train_mod = (y_train == 3) \n",
     "y_test_mod = (y_test == 3)"
@@ -153,16 +156,13 @@
    ],
    "source": [
     "diff_fpr_tpr = tpr - fpr\n",
-    "\n",
-    "index_h = (thresholds <= 0.8).argmax()\n",
+    "index_h = (thresholds <= 0.8).argmax() # max index at cut off 0.8 \n",
     "index_m = (diff_fpr_tpr).argmax() # index corresponding to the point minimizing TPR - FPR\n",
-    "index_l = (thresholds >= 0.1).argmin()\n",
-    "\n",
-    "threshold_index = [index_h,index_m,index_l] # Selected threshold indices, 42 corresponds to the point maximizing TPR - FPR\n",
+    "index_l = (thresholds >= 0.1).argmin() # min index at cut off 0.1\n",
+    "threshold_index = [index_h,index_m,index_l] \n",
     "\n",
     "f, axes = plt.subplots(3, 2, figsize=(8, 10))\n",
     "f.tight_layout()\n",
-    "\n",
     "for i in range(3):\n",
     "    cf_matrix = metrics.confusion_matrix(y_test_mod, (clf_pred[:,1] >= thresholds[threshold_index[i]]).astype('int'))\n",
     "    cf_disp = metrics.ConfusionMatrixDisplay(cf_matrix)\n",
@@ -176,12 +176,8 @@
     "    axes[i,0].plot(fpr, tpr, linewidth=2, label=\"ROC curve\")\n",
     "    axes[i,0].plot(fpr[threshold_index[i]],tpr[threshold_index[i]],'o')\n",
     "    axes[i,0].set(xlabel='False Positive Rate (Sensitivity)', ylabel='True Positive Rate (1-Specificity)')\n",
-    "    \n",
     "\n",
-    "\n",
-    "plt.show()\n",
-    "\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
@@ -233,8 +229,7 @@
     "                xytext=(fpr[threshold_index[i]]+0.1,tpr[threshold_index[i]]-0.1),arrowprops=dict(arrowstyle=\"->\"))\n",
     "\n",
     "\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
